--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body, html {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   background-color: #d8cdec;
   width: 100%;
+  text-align: center;
 }
 
 h1 {
+  font-size: 36px;
   font-style: italic;
   color: #009698;
   text-align: center;
@@ -39,4 +41,13 @@ nav {
   margin: 0;
   top: 0;
   width: 100%;
+}
+
+button {
+  cursor: pointer;
+}
+
+#restart {
+  margin: 5em;
+  width: 80px;
 }
