--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, html {
   background-color: #d8cdec;
   width: 100%;
   text-align: center;
+  min-width: 810px;
 }
 
 h1 {
@@ -45,7 +46,8 @@ nav {
 
 button {
   cursor: pointer;
-}
+  justify-content: space-between;
+}/*how to make the same space between buttons*/
 
 #restart {
   margin: 5em;
