🎲🎹 Checkpoint ./.glitch-assets:19921051/749 ./index.html:19921051/397 ./style.css:19921051/74

--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ h2 {
 .question {
   display: flex;
   margin-top: 2em;
-  justify-content: center;
+
 }
   
 .answer-choice img {
+  width: 200px;
   height: 10em;
   border-radius: 10px;
 }
