--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body, html {
   background-color: #d8cdec;
   width: 100%;
   text-align: center;
-  min-width: 810px;
-}
+  min-width: 900px;
+} /*figure out why it is not centered*/
 
 h1 {
   font-size: 36px;
@@ -54,7 +54,7 @@ nav {
 }
 
 button {
-  color: #A4E5E0;
+  color: #37BEB0;
   cursor: pointer;
   justify-content: space-between;
   width: 60%;
