--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ body, html {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   background-color: #d8cdec;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  
+  min-width: 850px;  
 } /*
-min-width: 900px;
+
 figure out why it is not centered*/
 
 h1 {
@@ -47,11 +49,13 @@ h2 {
 }
 
 nav {
+  position: relative;
   background-color: #330067;
   border-style: solid #330067;
+  padding: 20px;
   width: 100%;
-  margin: auto;
-  top: 0;
+  margin-right: -50px;
+  top: 0;/*why does it not go all the way across*/
 }
 
 button {
