--- a/style.css
+++ b/style.css
@@ -8,12 +8,11 @@ body, html {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   background-color: #d8cdec;
   width: 100%;
-  display: flex;
-  flex-direction: column;
   text-align: center;
   min-width: 850px;  
 } /*
-
+  display: flex;
+  flex-direction: column;
 figure out why it is not centered*/
 
 h1 {
@@ -33,9 +32,12 @@ h2 {
 .question {
   display: flex;
   margin-top: 2em;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 80%;
-  margin: auto;
+
+/*   
+    border: solid red;
+  margin: 0 auto;*/
 }
 
 .answer-choice {
@@ -49,13 +51,16 @@ h2 {
 }
 
 nav {
-  position: relative;
+
   background-color: #330067;
   border-style: solid #330067;
   padding: 20px;
   width: 100%;
-  margin-right: -50px;
-  top: 0;/*why does it not go all the way across*/
+
+  top: 0;/*
+    position: relative;
+    margin-right: -50px;
+  why does it not go all the way across*/
 }
 
 button {
