🏮☃️ Checkpoint ./index.html:19921051/10 ./style.css:19921051/65 ./script.js:19921051/9

--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ h2 {
   color: #191970;
 }
 
+h3 {
+  color: #191970;
+  font-size: 50px;
+}
+
 .question {
   display: flex;
   margin-top: 2em;
@@ -70,7 +75,7 @@ button {
   width: 60%;
   background-color: #191970;
   border-radius: 10px;
-  padding: 0px 5px;
+  padding: 5px 5px;
 }/*how to make the same space between buttons*/
 
 #restart {
