--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h3 {
   margin-top: 2em;
   justify-content: space-between;
   width: 80%;
-
+  margin: 0 auto;
 /*   
     border: solid red;
   margin: 0 auto;*/
