🌚🌒 Checkpoint ./script.js:19921051/1089 ./style.css:19921051/82

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
-/*   
+/*   why is it so wonky when the browser gets smaller
     border: solid red;
   margin: 0 auto;*/
 }
