🖼👩 Checkpoint ./script.js:19921051/58 ./style.css:19921051/1 ./index.html:19921051/92

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav {
   why does it not go all the way across*/
 }
 
-button {
+.button {
   color: #37BEB0;
   cursor: pointer; /*default is the other one*/
   justify-content: space-between;
